--- a/index.html
+++ b/index.html
@@ -801,12 +801,12 @@
       <div class="container">
 
          <div class="map">
-            <h2 class="map__title">
-               <div>
-                  <i class="fas fa-map-marker-alt"></i>
-               </div>
-               <a class="map__link" href="https://goo.gl/maps/7J5NYYx8cw5kWkGP6" target="_blank">Open Mapa</a>
-            </h2>
+            <div class="map__title">
+               <i class="fas fa-map-marker-alt"></i>
+               <h2>
+                  <a class="map__link" href="https://goo.gl/maps/7J5NYYx8cw5kWkGP6" target="_blank">Open Mapa</a>
+               </h2>
+            </div>
          </div>
 
       </div>
