--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
                <a class="nav__link" href="#">work</a>
                <a class="nav__link" href="#">blog</a>
                <a class="nav__link" href="#">contact</a>
+               <a class="nav__link" href="#">
+                  <i class="fas fa-shopping-cart"></i>
+               </a>
+               <a class="nav__link" href="#">
+                  <i class="fas fa-search"></i>
+               </a>
             </nav>
          </div>
       </div>
@@ -797,6 +803,7 @@
       </div> <!-- /container -->
    </section>
 
+   <!-- Map -->
    <section class="section section_map">
       <div class="container">
 
@@ -811,6 +818,130 @@
 
       </div>
    </section>
+
+   <!-- Footer -->
+   <footer class="footer">
+      <div class="container">
+
+         <div class="footer__inner">
+
+            <div class="footer__col  footer__col_first">
+               <div class="footer__logo">
+                  MpGo
+               </div>
+               <div class="footer__text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                  dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                  aliquip ex ea commodo consequat.
+               </div>
+
+               <div class="footer__social">
+                  <div class="footer__social-header">
+                     <b>15k</b> followers
+                  </div>
+                  <div class="footer__social-content">
+                     Follow Us:
+                     <a href="#" target="_blank">
+                        <i class="fab fa-facebook-f"></i>
+                     </a>
+                     <a href="#" target="_blank">
+                        <i class="fab fa-twitter"></i>
+                     </a>
+
+                     <a href="#" target="_blank">
+                        <i class="fab fa-instagram"></i>
+                     </a>
+                  </div>
+               </div>
+
+               <form class="subscribe" action="/" method="post">
+                  <input class="subscripe__input" type="email" name="name" placeholder="Your Email...">
+                  <button class="subscripe__btn" type="submit">Subscribe</button>
+               </form>
+            </div> <!-- /footer__col -->
+
+            <div class="footer__col footer__col_second">
+               <div class="footer__title">
+                  blogs
+               </div>
+               <div class="blogs">
+                  <div class="blogs__item">
+                     <img class="blogs__img" src="images/blogs/img-1.jpg" alt="">
+                     <div class="blogs__content">
+                        <a class="blogs__title" href="#">
+                           Lorem ipsum dolor sit amet,
+                           consectetur adipiscing
+                        </a>
+                        <div class="blogs__date">Jan 9, 2016</div>
+                     </div>
+                  </div>
+
+                  <div class="blogs__item">
+                     <img class="blogs__img" src="images/blogs/img-2.jpg" alt="">
+                     <div class="blogs__content">
+                        <a class="blogs__title" href="#">
+                           Consectetur adipiscing elit,
+                           sed do eiusmod tempor
+                        </a>
+                        <div class="blogs__date">Jan 9, 2016</div>
+                     </div>
+                  </div>
+
+                  <div class="blogs__item">
+                     <img class="blogs__img" src="images/blogs/img-3.jpg" alt="">
+                     <div class="blogs__content">
+                        <a class="blogs__title" href="#">
+                           sed do eiusmod tempor
+                           incididunt ut labore
+                        </a>
+                        <div class="blogs__date">Jan 9, 2016</div>
+                     </div>
+                  </div>
+               </div> <!-- /blogs -->
+            </div> <!-- /footer__col -->
+
+            <div class="footer__col footer__col_third">
+               <div class="footer__title">
+                  instagram
+               </div>
+               <div class="instagram">
+                  <a class="instagram__item" href="#" target="_blank">
+                     <img src="images/instagram/img-1.jpg" alt="">
+                  </a>
+                  <a class="instagram__item" href="#" target="_blank">
+                     <img src="images/instagram/img-2.jpg" alt="">
+                  </a>
+                  <a class="instagram__item" href="#" target="_blank">
+                     <img src="images/instagram/img-3.jpg" alt="">
+                  </a>
+                  <a class="instagram__item" href="#" target="_blank">
+                     <img src="images/instagram/img-4.jpg" alt="">
+                  </a>
+                  <a class="instagram__item" href="#" target="_blank">
+                     <img src="images/instagram/img-5.jpg" alt="">
+                  </a>
+                  <a class="instagram__item" href="#" target="_blank">
+                     <img src="images/instagram/img-6.jpg" alt="">
+                  </a>
+                  <a class="instagram__item" href="#" target="_blank">
+                     <img src="images/instagram/img-7.jpg" alt="">
+                  </a>
+                  <a class="instagram__item" href="#" target="_blank">
+                     <img src="images/instagram/img-8.jpg" alt="">
+                  </a>
+                  <a class="instagram__item" href="#" target="_blank">
+                     <img src="images/instagram/img-9.jpg" alt="">
+                  </a>
+               </div>
+            </div>
+
+         </div> <!-- /footer__inner -->
+
+         <div class="copyright">
+            © 2016 MoGo free PSD template by <span>Laaqiq</span>
+         </div>
+      </div> <!-- /container -->
+   </footer>
 </body>
 
 </html>
