--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@
 
                <div class="slider__item active">
                   <span class="slider__number">01</span>
-                  Intro
+                  <span class="slider__text">Intro</span>
                </div>
                <div class="slider__item">
                   <span class="slider__number">02</span>
-                  Works
+                  <span class="slider__text">Works</span>
                </div>
                <div class="slider__item">
                   <span class="slider__number">03</span>
-                  About
+                  <span class="slider__text">About</span>
                </div>
                <div class="slider__item">
                   <span class="slider__number">04</span>
-                  Contacts
+                  <span class="slider__text"> Contacts</span>
                </div>
             </div>
          </div>
@@ -97,27 +97,33 @@
          </div> <!-- /section__header -->
          <div class="card">
             <div class="card__item">
-               <div class="card__img">
-                  <img src="images/about/about-1.jpg" alt="Наша команда">
-               </div>
-               <div class="card__text">
-                  super team
-               </div>
-            </div>
-            <div class="card__item">
-               <div class="card__img">
-                  <img src="images/about/about-2.jpg" alt="Наша команда">
-               </div>
-               <div class="card__text">
-                  super team
+               <div class="card__inner">
+                  <div class="card__img">
+                     <img src="images/about/about-1.jpg" alt="Наша команда">
+                  </div>
+                  <div class="card__text">
+                     super team
+                  </div>
                </div>
             </div>
             <div class="card__item">
-               <div class="card__img">
-                  <img src="images/about/about-3.jpg" alt="Наша команда">
+               <div class="card__inner">
+                  <div class="card__img">
+                     <img src="images/about/about-2.jpg" alt="Наша команда">
+                  </div>
+                  <div class="card__text">
+                     super team
+                  </div>
                </div>
-               <div class="card__text">
-                  super team
+            </div>
+            <div class="card__item">
+               <div class="card__inner">
+                  <div class="card__img">
+                     <img src="images/about/about-3.jpg" alt="Наша команда">
+                  </div>
+                  <div class="card__text">
+                     super team
+                  </div>
                </div>
             </div>
          </div>
@@ -184,7 +190,7 @@
          </div> <!-- /section__header -->
 
          <div class="srvices">
-            <div class="services__item">
+            <div class="services__item services_border">
                <img class="services__icon" src="images/services/item-1.png" alt="">
                <div class="services__title">
                   Photography
@@ -194,7 +200,7 @@
                </div>
             </div>
 
-            <div class="services__item">
+            <div class="services__item services_border">
                <img class="services__icon" src="images/services/item-2.png" alt="">
                <div class="services__title">
                   Web Design
@@ -204,7 +210,7 @@
                </div>
             </div>
 
-            <div class="services__item">
+            <div class="services__item services_border">
                <img class="services__icon" src="images/services/item-3.png" alt="">
                <div class="services__title">
                   Creativity
@@ -213,11 +219,7 @@
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
                </div>
             </div>
-         </div> <!-- /services -->
 
-         <hr>
-
-         <div class="srvices">
             <div class="services__item">
                <img class="services__icon" src="images/services/item-4.png" alt="">
                <div class="services__title">
@@ -286,7 +288,7 @@
 
          <div class="wedo">
             <div class="wedo__item">
-               <img src="images/wedo/Layer_43.jpg" alt="">
+               <img class="wedo__img" src="images/wedo/Layer_43.jpg" alt="">
             </div>
             <div class="wedo__item">
                <div class="accordion">
@@ -395,11 +397,11 @@
             </div>
          </div> <!-- /section__header -->
 
-         <!-- card -->
+         <!-- Card -->
          <div class="card">
 
-            <div class="card__inner">
-               <div class="card__item">
+            <div class="card__item">
+               <div class="card__inner">
                   <div class="card__img">
                      <img src="images/team/img-1.jpg" alt="">
                   </div>
@@ -426,8 +428,8 @@
                </div>
             </div>
 
-            <div class="card__inner">
-               <div class="card__item">
+            <div class="card__item">
+               <div class="card__inner">
                   <div class="card__img">
                      <img src="images/team/img-2.jpg" alt="">
                   </div>
@@ -454,8 +456,8 @@
                </div>
             </div>
 
-            <div class="card__inner">
-               <div class="card__item">
+            <div class="card__item">
+               <div class="card__inner">
                   <div class="card__img">
                      <img src="images/team/img-3.jpg" alt="">
                   </div>
